responsive nav logo

--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,8 @@ img {
 }
 
 nav.nav {
-	position: fixed;
-	z-index: 1;
+	/*position: fixed;
+	z-index: 999;*/
 	width: 100%;
 	margin: 0;
 	white-space: nowrap;
@@ -274,4 +274,12 @@ footer .pinterest,
 footer .twitter,
 footer .flickr {
 	background-color: #535353;
+}
+
+/* RESPONSIVE */
+@media (max-width: 480px) {
+	div.nav {
+		font-size: 14px;
+		margin-left: 30px;
+	}
 }
